--- a/site.css
+++ b/site.css
@@ -20,6 +20,7 @@ h2.cartela-titulo {
     margin-top: 0px;
     margin-bottom: 0px;
     text-align: center;
+    line-height: 5vw;
     text-transform: uppercase;
     border-bottom: 3px solid black;
 }
@@ -41,8 +42,6 @@ h2.cartela-titulo {
 
 .cartela-casa {
     max-width: 20%;
-    display: inline-block;
-    vertical-align: top;
     width: 20%;
     height: 100%;
     max-height: 100%;
@@ -52,6 +51,9 @@ h2.cartela-titulo {
     justify-content: center;
     align-items: center;
     border-right: 2px solid black;
+    font-size: 12px;
+    line-height: 10px;
+    padding: 2px;
 }
 
 .cartela-casa:last-child {
@@ -60,4 +62,12 @@ h2.cartela-titulo {
 
 .cartela-casa.cartela-casa-img img {
     max-width: 100%;
+}
+
+#output{
+    text-align: center;
+}
+
+textarea#casasBingo {
+    height: 20vh;
 }
