--- a/site.css
+++ b/site.css
@@ -1,74 +1,93 @@
 .site-top {
-    margin: 0 15%;
-    overflow: hidden;
+  margin: 0 15%;
+  overflow: hidden;
 }
 
 .cartela {
-    display: inline-block;
-    margin: 10px;
-    border: 3px solid black;
-    max-width: 45vw;
-    max-height: 24.5vw;
-    width: 45vw;
-    height: 24.5vw;
-    vertical-align: top;
+  display: inline-block;
+  margin: 10px;
+  border: 3px solid black;
+  max-width: 45vw;
+  max-height: 24.5vw;
+  width: 45vw;
+  height: 24.5vw;
+  vertical-align: top;
 }
 
 h2.cartela-titulo {
-    height: 5vw;
-    max-height: 5vw;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    text-align: center;
-    line-height: 5vw;
-    text-transform: uppercase;
-    border-bottom: 3px solid black;
+  height: 5vw;
+  max-height: 5vw;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  text-align: center;
+  line-height: 5vw;
+  text-transform: uppercase;
+  border-bottom: 3px solid black;
 }
 
 .cartela-corpo {
-    margin: 4px 0 0 0;
+  margin: 4px 0 0 0;
 }
 
 .cartela-linha {
-    height: calc(4vw - 3px);
-    display: flex;
-    margin: 0 3px;
-    border-bottom: 2px solid black;
+  height: calc(4vw - 3px);
+  display: flex;
+  margin: 0 3px;
+  border-bottom: 2px solid black;
 }
 
 .cartela-linha:last-child {
-    border-bottom-width: 0px
+  border-bottom-width: 0px;
 }
 
 .cartela-casa {
-    max-width: 20%;
-    width: 20%;
-    height: 100%;
-    max-height: 100%;
-    border-collapse: separate;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-right: 2px solid black;
-    font-size: 22px;
-    line-height: 10px;
-    padding: 2px;
+  max-width: 20%;
+  width: 20%;
+  height: 100%;
+  max-height: 100%;
+  border-collapse: separate;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-right: 2px solid black;
+  font-size: 22px;
+  line-height: 10px;
+  padding: 2px;
 }
 
 .cartela-casa:last-child {
-    border-right-width: 0px
+  border-right-width: 0px;
 }
 
 .cartela-casa.cartela-casa-img img {
-    max-width: 150%;
-    max-height: 150%;
+  max-width: 150%;
+  max-height: 150%;
 }
 
-#output{
-    text-align: center;
+#output {
+  text-align: center;
 }
 
 textarea#casasBingo {
-    height: 20vh;
+  height: 20vh;
+}
+
+.bingo-text .cartela {
+  max-width: 60vw;
+  max-height: 40vw;
+  width: 60vw;
+  height: 40vw;
+}
+.bingo-text .cartela-linha {
+  height: calc(7vw - 3px);
+}
+.bingo-text .cartela-casa {
+  font-size: 12px;
+  word-break: break-all;
+}
+
+.bingo-text .cartela-casa.cartela-casa-img img {
+  max-width: 100%;
+  max-height: 100%;
 }
